--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <title>ALICE Documentation</title>
-<meta http-equiv="refresh" content="0; url=./analysis-tutorial/">
+<meta http-equiv="refresh" content="0; url=./alice-analysis-tutorial/">
 </head>
 </html>
